--- a/index.html
+++ b/index.html
@@ -142,9 +142,7 @@
                             <table class="header-table" align="center" border="0" cellspacing="0" cellpadding="0">
                                 <tr style="background-color: #F8E1D8;">
                                     <td align="center" style="padding: 15px 0;">
-                                        <img height="30"
-                                            src="https://emaillove-emails.s3.amazonaws.com/8e6a9c659a2a8179f3f7c1c0c3846f96.png"
-                                            alt="google store">
+                                        <img height="30" src="images/google-store.png" alt="google store">
                                     </td>
                                 </tr>
                                 <tr>
@@ -189,8 +187,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <img width="100%" align="center"
-                                            src="https://emaillove-emails.s3.amazonaws.com/58c2c5047836a1706da3e221bd8b8205.png"
+                                        <img width="100%" align="center" src="images/pixel-buds-pro.png"
                                             alt="Pixel Buds Pro" style="margin: 0;">
                                     </td>
                                 </tr>
@@ -226,8 +223,7 @@
                                                         align="right" border="0" cellspacing="0" cellpadding="0">
                                                         <tr>
                                                             <td>
-                                                                <img width="100%"
-                                                                    src="https://emaillove-emails.s3.amazonaws.com/0f51bb024e3bfef7a451d9d5e4eccac8.png"
+                                                                <img width="100%" src="images/woman-laptop.png"
                                                                     alt="busy woman using laptop with pixel buds pro"
                                                                     style="min-height: 100%; display: block; border-top-right-radius: 10px; border-bottom-right-radius: 10px;">
                                                             </td>
@@ -279,9 +275,8 @@
                                             style="background-color: #FCE7E3; border-collapse: collapse; border-radius: 10px; margin: 0 auto; text-align: center;">
                                             <tr>
                                                 <td>
-                                                    <img width="100%"
-                                                        src="https://emaillove-emails.s3.amazonaws.com/ad6eec6168182c64468e47b46fa59c8f.png"
-                                                        alt="" style="border-radius: 10px 10px 0 0;">
+                                                    <img width="100%" src="images/man-camera.png" alt="man using camera"
+                                                        style="border-radius: 10px 10px 0 0;">
                                                 </td>
                                             </tr>
                                             <tr>
@@ -304,9 +299,8 @@
                                             style="background-color: #F9FCDD; border-collapse: collapse; border-radius: 10px; margin: 0 auto; text-align: center;">
                                             <tr>
                                                 <td>
-                                                    <img width="100%"
-                                                        src="https://emaillove-emails.s3.amazonaws.com/4b30a9439a769f366bddd402490256ee.png"
-                                                        alt="" style="border-radius: 10px 10px 0 0;">
+                                                    <img width="100%" src="images/woman-exercise.png"
+                                                        alt="woman exercising" style="border-radius: 10px 10px 0 0;">
                                                 </td>
                                             </tr>
                                             <tr>
@@ -350,8 +344,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <img width="100%"
-                                            src="https://emaillove-emails.s3.amazonaws.com/1243a163d92de73f917fad64a44258f5.png"
+                                        <img width="100%" src="images/pixel-buds-pro-bw.png"
                                             alt="black and white Pixel Buds Pro">
                                     </td>
                                 </tr>
@@ -378,8 +371,7 @@
                                             style="background-color: white; margin: 0 14px; padding: 0 15px;">
                                             <tr>
                                                 <td valign="top">
-                                                    <img style="padding: 15px;"
-                                                        src="https://emaillove-emails.s3.amazonaws.com/5be4e15a7a3696bab760c85b4b039a4c.png"
+                                                    <img style="padding: 15px;" src="images/google-one-icon.png"
                                                         alt="google one" width="50px" height="50px">
                                                     <h3 style="font-size: 16px;">Google One</h3>
                                                     <p style="font-size: 12px; font-weight: 500;">Get
@@ -399,8 +391,7 @@
                                             style="background-color: white; margin: 0 14px; padding: 0 15px;">
                                             <tr>
                                                 <td valign="top">
-                                                    <img style="padding: 15px;"
-                                                        src="https://emaillove-emails.s3.amazonaws.com/d46527efa24e249d32981ac74eed84d4.png"
+                                                    <img style="padding: 15px;" src="images/calculator-icon.png"
                                                         alt="calculator" width="50px" height="50px">
                                                     <h3 style="font-size: 16px;">Financing</h3>
                                                     <p style="font-size: 12px; font-weight: 500; padding: 0 0 50px;">
@@ -421,8 +412,7 @@
                                             style="background-color: white; margin: 0 14px; padding: 0 15px;">
                                             <tr>
                                                 <td valign="top">
-                                                    <img style="padding: 15px;"
-                                                        src="https://emaillove-emails.s3.amazonaws.com/0a490bb3d3fc6df358d936131568a5e0.png"
+                                                    <img style="padding: 15px;" src="images/shipping-icon.png"
                                                         alt="shipping" width="50px" height="50px">
                                                     <h3 style="font-size: 16px;">Free shipping</h3>
                                                     <p style="font-size: 12px; font-weight: 500; padding: 0 0 83px;">Get
@@ -450,8 +440,7 @@
                                 <tr>
                                     <td align="center">
                                         <img class="leaf-img" style="position: absolute; left: 50px; top: 8px;"
-                                            align="left" width="33" height="21"
-                                            src="https://emaillove-emails.s3.amazonaws.com/8e5f6d25755db710a617acf0ddf58bfc.png"
+                                            align="left" width="33" height="21" src="images/leaf-icon.png"
                                             alt="green leaf">
                                         <p class="recycle-text"
                                             style="display: inline-block; font-size: 12px; font-weight: 500; text-align: center;"
@@ -464,17 +453,13 @@
                                 </tr>
                                 <tr>
                                     <td align="center" style="padding: 10px 0;">
-                                        <a href="#"><img width="48" height="48"
-                                                src="https://emaillove-emails.s3.amazonaws.com/54ce016d4586fbfbb9f3cf628295ab2f.png"
+                                        <a href="#"><img width="48" height="48" src="images/youtube.png"
                                                 alt="youtube"></a>
-                                        <a href="#"><img width="48" height="48"
-                                                src="https://emaillove-emails.s3.amazonaws.com/2e21d825f152a0af07f649fb54a093fa.png"
+                                        <a href="#"><img width="48" height="48" src="images/facebook.png"
                                                 alt="facebook"></a>
-                                        <a href="#"><img width="48" height="48"
-                                                src="https://emaillove-emails.s3.amazonaws.com/2dcbb9ce52fb2e153a181c00e2da5d76.png"
+                                        <a href="#"><img width="48" height="48" src="images/twitter.png"
                                                 alt="twitter"></a>
-                                        <a href="#"><img width="48" height="48"
-                                                src="https://emaillove-emails.s3.amazonaws.com/ece43bb3cfcce2a859f4c0539c383aa2.png"
+                                        <a href="#"><img width="48" height="48" src="images/instagram.png"
                                                 alt="instagram"></a>
                                     </td>
                                 </tr>
@@ -487,14 +472,10 @@
                                 <tr>
                                     <td align="center" style="padding: 25px 0;">
                                         <a style="margin: 0 15px 0 0" href="#"><img width="48" height="48"
-                                                src="https://emaillove-emails.s3.amazonaws.com/f39224061ddb124b5ba3cff59e446723.png"
-                                                alt="happy face"></a>
+                                                src="images/happy.png" alt="happy face"></a>
                                         <a style="margin: 0 15px 0 0" href="#"><img width="48" height="48"
-                                                src="https://emaillove-emails.s3.amazonaws.com/eca9c61bd1340ccf2ce1831f101424c0.png"
-                                                alt="neutral face"></a>
-                                        <a href="#"><img width="48" height="48"
-                                                src="https://emaillove-emails.s3.amazonaws.com/ad4abdbfea1952f624fb3ceedbe1ed11.png"
-                                                alt="sad face"></a>
+                                                src="images/neautral.png" alt="neutral face"></a>
+                                        <a href="#"><img width="48" height="48" src="images/sad.png" alt="sad face"></a>
                                     </td>
                                 </tr>
                                 <tr>
